feat：悬浮窗笔记完善

--- a/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
@@ -13,9 +13,8 @@
 - 03.悬浮窗技术要点
     - 3.1 业务思考点分析
     - 3.2 关键技术要点
-    - 3.3 应用内悬浮窗
-    - 3.4 应用外悬浮窗
-    - 3.5 添加浮窗源码流程
+    - 3.3 应用悬浮窗
+    - 3.4 添加浮窗源码流程
     - 3.6 拖拽回弹吸附
 - 04.开发重要步骤
     - 4.1 悬浮窗实现流程
@@ -77,12 +76,16 @@
 #### 1.4 设计目标
 - 目前开发悬浮窗的方案有以下几种
     - 第一种：写在base里面或者监听所有activity生命周期，这样每次启动一个新的Activity都要往页面上addView一次。
-    - 第二种：采用在Window上添加View的形式，相当于是全局性的悬浮窗。
+    - 第二种：采用在Window上添加View的形式，相当于是全局性的悬浮窗。一般是采用这种
+- 悬浮窗设计目标
+    - 良好的接口设计，可以设置各种自定义视图，支持拖动和拖拽吸附到边缘。强大的Api方法和傻瓜式调用链路。
 
 
 #### 1.5 收益分析
 - 悬浮窗收益
     - 提高产品的用户体验，app推到后台，或者推出页面做其他操作(比如查看信息)，这个时候浮窗功能主要是增加通话的友好
+- 技能收益
+    - 下沉为功能基础库，可以方便各个产品线使用，提高开发的效率。避免跟业务解耦合
 
 
 ### 02.Window概念
@@ -136,12 +139,12 @@
 
 #### 3.2 关键技术要点
 - 悬浮窗权限判断
-    - 1
+    - 这个需要注意针对不同的版本需要适配权限。
 - 将view添加到悬浮窗上
     - 利用addView将View添加在window上，同样的，WindowManager.LayoutParams.type可以设置View的层级，防止被其他业务界面所覆盖。
 
 
-#### 3.3 应用内悬浮窗
+#### 3.3 应用悬浮窗
 - 应用内悬浮窗实现流程
     - 1.获取WindowManager；2.创建悬浮View；3.设置悬浮View的拖拽事件；4.添加View到WindowManager中
 - 对于应用悬浮窗来说，Android版本对其影响不大。
@@ -149,10 +152,8 @@
     - Type为TYPE_APPLICATION_ATTACHED_DIALOG：需要在Activity获取焦点，并且用户可操作时才可添加。
 
 
-#### 3.4 应用外悬浮窗
 
-
-#### 3.5 添加浮窗源码流程
+#### 3.4 添加浮窗源码流程
 - 悬浮窗添加流程：
     - -> WindowManager.addView          这个是调用ViewManager接口的addView方法添加视图
     - -> WindowManagerImpl.addView      接着会调用具体实现类
@@ -310,7 +311,6 @@
     - https://blog.csdn.net/iromkoear/article/details/68936832
 - Android悬浮窗原理解析
     - https://blog.csdn.net/Awenyini/article/details/78265284
-
 
 
 
