--- a/Read/ReadMeWiki/06.Framwork/01.App核心概念分析.md
+++ b/Read/ReadMeWiki/06.Framwork/01.App核心概念分析.md
@@ -219,40 +219,13 @@
     - 一个 Activity 对应一个 Window 也就是 PhoneWindow，一个 PhoneWindow 持有一个 DecorView 的实例，DecorView 本身是一个 FrameLayout。
 
 
+
 #### 6.2 DecorView如何创建
-- 用户执行Activity的setContentView方法，内部是调用PhoneWindow的setContentView方法，在PhoneWindow中完成DecorView的创建。流程
-    - 1.Activity中的setContentView
-    - 2.PhoneWindow中的setContentView
-    - 3.PhoneWindow中的installDecor
-    ```
-    public void setContentView(@LayoutRes int layoutResID) {
-        getWindow().setContentView(layoutResID);
-        initWindowDecorActionBar();
-    }
-    
-    @Override
-    public void setContentView(int layoutResID) {
-        ...
-        if (mContentParent == null) {
-            installDecor();
-        } else if (!hasFeature(FEATURE_CONTENT_TRANSITIONS)) {
-            mContentParent.removeAllViews();
-        }
-        ...
-    }
-    
-    private void installDecor() {
-        if (mDecor == null) {
-            mDecor = generateDecor();
-            mDecor.setDescendantFocusability(ViewGroup.FOCUS_AFTER_DESCENDANTS);
-            mDecor.setIsRootNamespace(true);
-            if (!mInvalidatePanelMenuPosted && mInvalidatePanelMenuFeatures != 0) {
-                mDecor.postOnAnimation(mInvalidatePanelMenuRunnable);
-            }
-        }
-        ...
-    }
-    ```
+- 从Activity中的setContentView()开始。
+    - 在Activity中的attach()方法中，生成了PhoneWindow实例。既然有了Window对象，那么我们就可以**设置DecorView给Window对象了。
+    - 从中获取mContentParent。获得到之后，然后通过installDecor方法，然后生成DecorView，不过这里操作很复杂，大概流程先从主题中获取样式，然后根据样式，加载对应的布局到DecorView中，为mContentParent添加View，即Activity中的布局。
+
+
 
 
 
