feat：悬浮窗笔记完善

--- a/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
@@ -209,8 +209,6 @@
     ``` java
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     ```
-- 针对不同厂商手机的权限说明
-    - 待完善
 
 
 #### 4.3 初始化悬浮窗
@@ -229,6 +227,12 @@
     layoutParams = new WindowManager.LayoutParams();
     ```
 - 第二步：LayoutParam设置
+    ``` java
+    wmParams.type = WindowManager.LayoutParams.TYPE_TOAST;
+    wmParams.width = 800;
+    wmParams.height = 800;
+    mWindowManager.addView(mview, wmParams);
+    ```
 
 
 #### 4.5 添加View到悬浮窗
