--- a/Read/ReadShareWiki/05.表达提升/08.做好技术的演讲.md
+++ b/Read/ReadShareWiki/05.表达提升/08.做好技术的演讲.md
@@ -1,6 +1,10 @@
 #### 目录介绍
 - 01.看一些案例数据
 - 02.技术类分享模版
+- 03.幻灯片设计原则
+- 04.可以训练到熟练
+- 05.避免紧张和焦虑
+
 
 
 
@@ -16,6 +20,13 @@
 - 比如，听众的组成是什么样的？参会者对这个领域的了解程度？听众们想听什么？最关键的是通过本次演讲，给听众带来什么价值？
 
 
+#### 1.3 分享提升自己
+- 在当前这个瞬息万变的时代里，如何快速有效地提升自己，对每个人来说变得越来越重要。
+- 我们强调更多的是学习和思考，古语也说: 学而不思则罔，思而不学则殆。而现在，还有一种更为行之有效的方法，那就是：分享。
+- 因为只有不断分享自己的知识和经验，才能够更多地和别人交流，获得更多反馈。这样就可以把提升自己这场战役从单打独斗变成团队作战，效率更高，效果更好。
+
+
+
 ### 02.技术类分享模版
 #### 2.1 技术分享模版
 - 在明确了主题之后，就需要设定好演讲的主线，对于技术类的分享，有一个相对固定的模式：
@@ -25,6 +36,106 @@
 - How: 深入浅出 3~4 个最核心的内容点，当然为了全面性，你可以都罗列出来，但介绍的重点建议控制在 3~4 项；
 - Future: 让大家了解你未来的计划，你对技术趋势的看法等等；
 - Recap: 对今天的主题再做一个回顾，让听众加深对核心内容记忆。
+
+
+#### 2.2 模版化的疑惑
+- 你可能会觉得，往往项目做完了，信息比较零散，一下要总结得这么有条理和全面很难，包括哪些是最值得分享的内容也不是马上就能全部列出来。
+- 这里分享一个我自己的心得，我习惯写wiki，任何时候自己想到值得分享的内容都丢进去，包括收集到的数据、文档、代码片段等等。
+- 当你的内容越来越丰富的时候，你就可以开始梳理这些case，一方面整理自己的思路，调整主线，另一方面看如何把这些case分布到主线的每一个环节，或者舍去。
+
+
+
+#### 2.3 逐字稿or提词器
+- 对于初次演讲，或者特别重要的演讲场合，如果你想让演讲效果更好、避免紧张一时不知如何表达，逐字稿会给你带来巨大的帮助。
+- 逐字稿能非常好地帮你组织语言，人的大脑非常不擅长做大量信息的前后逻辑处理，但文字和图表能非常高效地帮助你梳理逻辑关系。
+- 使用逐字稿，要避免照本宣科，脑子里不停地回忆逐字稿下一句是什么，而是应该充分理解逐字稿的逻辑。
+- 在演讲时，之前训练过程中脑子里不断预热过的关键词会按这个逻辑很流畅地释放出来，你会逐渐找到感觉，跟随这个感觉变得更投入，最后还能根据实际情况做临场发挥，越来越放松和自如。
+
+
+### 03.幻灯片设计原则
+#### 3.1 PPT设计原则
+- 多少页幻灯片合适？ 还是回到前面我们说的模式：
+- Who: 1 页
+- What&When: 1~2 页
+- Why: 1 页
+- How: 展开 3~4 点，每点 2~3 页
+- Future: 1 页
+- Recap: 1 页
+- 基本控制在 15~20 页的范畴，当然可以根据实际需要再增加，比如为了增加数据对比展示等。
+
+
+
+#### 3.2 PPT建议
+- 对于技术分享，不太建议大量采用交互式的幻灯片，每句话一张幻灯片，频繁上下文切换，容易让听众分心。
+- 而很多复杂的技术逻辑很难在精炼到每页一句话的同时又能让听众容易理解，这样会导致听众无法跟上你的节奏。
+- 对于幻灯片的内容，建议减少大篇幅的文字，用最精简的文字加上图表来展示，不仅使得幻灯片清晰明了，也不会让听众觉得照本宣科。
+- 可能大家也会注意到，平时听语音信息的速度比你看文字的速度要慢很多，而阅读文字又比从一个图获取信息要低效。
+- 尤其在技术分享中涉及复杂逻辑和架构时，更需要注重图表来提高沟通效率，往往能达到一图胜千言的效果。
+
+
+#### 3.3 Demo如何讲好
+- 技术分享的另一个特点就是经常用到 Demo。Demo 看起来很简单，但要做好却不容易：
+- 如何在有限的几分钟里面充分展示技术特点和产品特点？多个环节、场景如何串联，上下文如何切换更自然？如何避免 Demo 失败？万一失败了怎么处理？
+
+
+
+### 04.可以训练到熟练
+#### 4.1 多种训练方式
+- 找安静的地方，自我练习。可以用手机录音、计时。通过录音方便自己纠正口头禅，比如“嗯”“对”等等。
+- 请信任的朋友来试听。有时候对于自己太熟悉的内容，虽然自己会觉得非常容易，但很可能朋友却不甚了解，或者对于整个项目自己太习以为常，于是跳过了必要的背景介绍，这样就容易和听众之间产生隔阂，所以要结合自己对听众的了解进行调整。
+- 公司内部试讲。如果能有机会在公司或者社区小范围的进行试讲，也是非常有帮助的，可以提前让自己适应在一定数量的听众面前演讲。
+- 冥想。这是我比较喜欢的方式之一，睡觉前在脑海里默默地翻幻灯片，想象真实的演讲场景，自己会怎么讲，Demo 流程是否完善，重点内容是否都讲到位了，做到成竹在胸。
+- 刻意训练不等于重复训练，两者最大的差别在于是否根据反馈不断进行迭代改进。
+
+
+
+### 05.避免紧张和焦虑
+#### 5.1 紧张情绪并不可怕
+- 首先，我们要接受这样的现实，每个人在面对众多双眼睛的时候，都会有情绪上的波动，这可是从老祖宗那里遗传下来的。
+- 试想一下，在远古时代，如果一个人被无数双眼睛盯着的时候，会是什么情况呢? 估计是遇到了兽群，这种情况下怎么可能还保持淡定呢？
+- 所以，有紧张情绪并不可怕，很多擅长演讲的人，并不是没有紧张情绪，而是他们有比较好的方法来应对这样的情绪。
+
+
+#### 5.2 内容要有价值
+- 演讲是否能够得到听众的认可，很大程度上在于它是否对大家有价值，也就是所谓的“干货”。
+- 价值一般来说体现在两个方面，一是钱，二是时间。曾经有一位前辈和我说过关于产品价值的观点，在这里也套用到演讲上。
+- 如果听众听了我们的演讲，回去实施一些措施，能够省钱，那么基本上我们可以得到不错的评价。如果能够节省时间，那么也一样。
+- 如果既能省钱，又能省时间，那么就体现了非常大的价值，优良的评价应该很容易获得。而终极目标是，演讲中的内容可以帮大家赚钱，那就更是超出了大家的期望。
+
+
+#### 5.3 适可而止
+- 很多时候，演讲者会把很多很多内容都塞在一场演讲里面，期望把自己多年所积累的所有经验一下子都讲给大家听。
+- 这种分享精神非常赞，但我们要考虑，演讲一般来说只有短短的四十五分钟，这么短的时间里面，怎么可能讲太多内容呢? 
+- 那样的效果只能是每个点都点到为止，大家也不会有太多收获。另外，内容太多，我们需要记的东西就越多，遗漏内容的几率也就越大，这些情况都会造成不必要的紧张。
+- 在做演讲的时候，知识点建议控制在三点左右，这样不仅更容易让听众记住，而且自己讲的时候也比较简单，不用担心到时候忘词。而且，知识点少，结构也比较容易设计。
+- 可以先引入话题，提出观点，然后用几个故事或者知识点来支撑这个观点，最后做一下总结。
+
+
+#### 5.4 PPT只是配角
+- PPT 现在已经是演讲中不可缺少的一部分，它能让我们更好地呈现想要讲述的内容。有些人在演讲的时候，会在 PPT 上面堆积大量的文字信息，然后演讲就变成了读 PPT 。
+- 那么 PPT 到底要做成什么样子呢? 我的建议是——多图少字。要知道演讲者才是主角，PPT 只是配角。
+- 一方面演讲者不需要让自己的演讲和 PPT 上的文字一一对应，可以有更多自由发挥的空间，还可以根据听众的反应来做出更合适的调整。
+- 另一方面，即便有时候讲的和最初计划的有些差别，也不用担心被听众发现，因为没有 PPT 这个奸细，谁都不会知道我们原来想讲的是什么，自然也就降低了紧张的可能性。
+
+
+
+#### 5.5 正式演讲前练习
+- 在正式演讲之前，应该尽可能多多练习。不仅要自己练习，而且至少要在公司内部或者在小伙伴面前和大家讲几次。很多时候，不讲几次，不得到其他人的反馈，光靠自己空想是不知道从哪里改进的。
+- 其实还有一种更简单的方式: 找个小黑屋，架上摄像机 (用手机也可以达到同样的效果)，自己面对着摄像机讲一次，然后自己悄悄找个地方观摩一下自己的表现，给自己挑挑毛病。
+- 一般来说，第一次看自己在摄像机里面的表现，我们都会很崩溃，因为会看到其中的自己和想象中的形象有很大差别。如果能够挺过这一关，我们的演讲水平就会有不小的提高。
+- 因为用这样的方式，我们会注意到很多不自觉出现的习惯，像挠头、摸鼻子等小动作，还有平时不注意的口头禅等等，如果能够稍微注意一下，再加上必要的练习，就可以提升演讲的质量了。
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
