feat：悬浮窗笔记完善

--- a/Read/ReadShareWiki/00.心怡宝贝/08.心怡的业余爱好.md
+++ b/Read/ReadShareWiki/00.心怡宝贝/08.心怡的业余爱好.md
@@ -1,11 +1,17 @@
 #### 目录介绍
+- 01.喜欢种植盆景
+- 02.喜欢唱歌
 
 
 
 
+### 01.喜欢种植盆景
+- 种植花花草草，然后想着铺满整个窗台。而且种植存活率特别高
 
 
 
+### 02.喜欢唱歌
+- 以前工作的时候，喜欢在家里唱歌，然后现在多个老师合租在一起害怕打扰别人
 
 
 
