--- a/Read/ReadShareWiki/05.表达提升/08.做好技术的演讲.md
+++ b/Read/ReadShareWiki/05.表达提升/08.做好技术的演讲.md
@@ -4,7 +4,11 @@
 - 03.幻灯片设计原则
 - 04.可以训练到熟练
 - 05.避免紧张和焦虑
-
+- 06.如何去讲好故事
+- 07.突出地展示观点
+- 08.肢体语言的管控
+- 09.做一场漂亮演讲
+- 10.总结讲演的要点
 
 
 
@@ -126,17 +130,68 @@
 - 因为用这样的方式，我们会注意到很多不自觉出现的习惯，像挠头、摸鼻子等小动作，还有平时不注意的口头禅等等，如果能够稍微注意一下，再加上必要的练习，就可以提升演讲的质量了。
 
 
+#### 5.6 把握最初五分钟
+- 有些演讲者害怕因为紧张而忘词，就采取了背稿的方式。不过真的不建议把所有内容都背下来，那样的话负担很大，而且一旦忘了一点，就会陷入“紧张 - 忘词 - 更加紧张”的恶性循环之中。
+- 那么要背多少呢? 我一般只会背下最前面五分钟的内容，其中可能会包括：自我介绍——这里最好能找到一种比较风趣的方式来介绍自己，让自己和听众拉近关系，也放松下来 ;演讲的题目——这个一定是不能忘掉的 ;演讲的内容简介——前面讲到了内容最好控制在三点左右，每一点一句话描述就好，这样也有利于自己在后面的演讲里面始终记着要讲的内容。
+- 在上台的最初五分钟是最紧张的，如果可以顺利度过，那么后面就很容易把紧张感转化成兴奋感，后面也就不会有太大的问题了。
 
 
 
+### 06.如何去讲好故事
+#### 6.1 了不起的技能
+- 在这个时代，说话变得如此重要，如果你能够在公众面前当众演讲，并且感染现场的听众，进而把内容和情绪通过互联网传播出去，那就是一个相当了不起的技能。
+- 技术人常常说，我写好代码做好技术不就行了，讲什么讲。技术固然重要，是安身立命之本，但是，如果能够通过演讲和写作的方式把好的技术和产品传播出去，不仅可以帮助别人，还可以收获个人影响力，并传播好的技术产品。
 
 
 
+#### 6.2 讲故事的方式
+- 用生硬的道理去告诉一个人怎么做，远不如通过生动有趣的故事或类比的案例效果好，人们在听故事的时候更容易产生共情作用，也更容易理解你想要表达的信息。
+- 演讲并不是纯粹的讲故事，尤其是技术演讲，那就成故事会了。演讲介于讲故事和报告之间。报告更倾向于精确的信息和枯燥的细节、事实和图表，汇报的时候用这种方式会比较好，公开演讲则更适合讲故事的方式。
+
+
+#### 6.3 怎么讲好故事
+- 讲故事的典型方式就是营造氛围，提出问题，分析问题，最后给出自己的解决方案。伟大的演讲与电影剧本常常很类似：
+- 1.清晰的开始、过程和结尾；2.具备有章可循的结构；3.通过某个情节来吸引听众的注意力，起承转合；4.开始和结束比中间部分短。
+- 有了讲故事的结构，用什么方式把这个故事讲好呢？其实很简单，古人不都说了嘛，赋比兴。那么什么是赋比兴呢？
+
+
+#### 6.4 什么是赋比兴
+- 赋就是铺陈直叙，即是人把思想感情事物细节平铺直叙地表达出来。淋漓尽致地细腻铺写，或渲染气氛和情绪。在做技术演讲的时候，常常会从某一个技术细节或者解决的具体技术问题入手，由点到面，层层展开，最后形成我们想要传递给用户的完整信息，就是这种方式。
+- 比就是类比，以彼物比此物，由一件事引入另一件事，通过形象的类比让人们更容易接受你的观点。类比思考几乎是跨越已知和未知鸿沟的唯一手段，也特别容易让听众产生代入感，并为你的演讲营造出跳脱和画面感。
+- 兴是托物起兴的意思，加以联想和展望，引出演讲者最终想表达的事物、思想和情感。这种表达手法一般用在演讲的结尾。一个公开的演讲，要么是推介好的技术和实践，要么是发布自己的产品，要么是传递某种思想和方法论，到了演讲的最后，要把整个演讲的内容做个升华，赋予演讲内容更高级的主题和思想，引发听众的联想。
+
+
+#### 6.5 演讲中的姿态
+- 姿态其实是用一种很自然很舒服的交流态势向台下的听众传递信息的方式。所谓最好的设计就是让人感觉不到设计的存在，如果你的姿态让人感到做作和不自然，那就是失败的表现。
+- 保持自然，目光坚定，勇敢地面对台下千百双眼睛的注视并熟视无睹，就是成功的第一步。好的演讲者与优秀电影演员常常很类似，在台上保持自然放松的体态，不浮夸，自己觉得舒服就可以。
+- 那该怎么应对听众的目光呢？用灯塔般的目光缓缓扫视全场，这样做的效果是每个人都感觉被你关注到了，又不会形成只盯着一个人看形成对峙的火爆场面。
+
+
+#### 6.6 避免照本宣科
+- 演讲中还有一个很大的忌讳是去读幻灯片上的内容，照本宣科，那人家来听你演讲干什么，还不如下载幻灯片自个儿回家去看。
+- 要用自然的语言去解读幻灯片上的内容，表达你的思想，传递你的信息，幻灯片更多是起到烘托效果和提醒你该讲什么的作用。
 
 
 
+### 09.做一场漂亮演讲
+#### 9.1 了解听众的诉求
+- 如同架构设计一样，了解需求永远是第一步的，任何脱离需求的架构设计都是耍流氓。参加技术大会的听众，主要是想学习知识，借鉴经验解决工作中的实际问题。
+- 那么演讲嘉宾可以在 PPT 中针对性地准备这些内容：包括真实案例、碰到的问题、踩到的坑、尝试过的各种解决方案以及解决方案的优缺点、迭代演进和最佳实践等等。
 
 
+#### 9.2 紧张是正常的
+- 紧张是正常的，紧张说明你内心重视这个事情，有的时候，紧张反而能够帮助你发挥地更好。往另一方面想，如果讲的内容是我们自己擅长的和熟悉的，何惧之有？
+
+
+#### 9.3 好的开场特别棒
+- 不管紧张不紧张，既然被推上台了，开场留给观众的第一印象就非常重要。如果你想不出什么有创意的开场，那就推荐一个适用于任何场合的开场方式：首先告诉大家我是谁，来自哪个公司，叫什么名字，职位可以说也可以不说。
+- 然后就是简单描述下自己的从业经历，让大家明白我为什么有资格讲这个主题，这个部分讲好了可以增强说服力。最重要也是最容易被遗忘的一点是，一定要告诉听众，演讲内容对他们有什么帮助。
+
+
+
+### 10.总结讲演的要点
+- 不知不觉写了这么多，最后做一个总结，要想做一场漂亮的技术演讲，我们需要做到：
+- 提前了解听众的诉求；认识到紧张是正常的；好的开场是成功的一半；采用一个安全的内容结构；PPT 内容呈现要清晰简洁；把控好整体节奏；收尾时要强调重点；回答提问要讲究技巧
 
 
 
