--- a/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
@@ -15,6 +15,7 @@
     - 3.2 关键技术要点
     - 3.3 应用悬浮窗
     - 3.4 添加浮窗源码流程
+    - 3.5 理解WMS原理
     - 3.6 拖拽回弹吸附
 - 04.开发重要步骤
     - 4.1 悬浮窗实现流程
@@ -50,6 +51,9 @@
     - 以视频通话为例，在视频通话时，我们打开其他应用或点击Home键退出时或点击缩放图标，悬浮窗会显示在其他应用之上，给人的假象是通话页面变小了，点击悬浮窗回到通过页面，悬浮窗消失。退出通话页面悬浮窗消失。
 - 市面上常见的悬浮窗，如微信视频通话功能，有如下特点：
     - 整屏页面能切换到一个小的悬浮窗；悬浮窗能运行在其他app上方；悬浮窗能跳回整屏页面，并且悬浮窗消失
+- 需求悬浮窗效果
+    - 点击缩小按钮，将当前远端视屏加载进悬浮窗，且悬浮窗可拖拽，不影响其他界面焦点；点击悬浮窗可返回原来的Activity
+
 
 
 #### 1.2 遇到问题
@@ -57,6 +61,9 @@
     - 全局悬浮窗在许多应用中都能见到，点击Home键，小窗口仍然会在屏幕上显示。
 - 那么开发全局悬浮窗属于那一类呢？
     - 属于系统窗口，相当于跟Toast是一个级别的。
+- 视频通话Activity如何最小化
+    - Activity本身自带了一个moveTaskToBack(boolean nonRoot)，我们要实现最小化只需要调用moveTaskToBack(true)传入一个true值就可以了，但是这里有一个前提，就是需要设置Activity的启动模式为singleInstance模式，两步搞定。
+    - 注：activity最小化后重新从后台回到前台会回调onRestart()方法。点击悬浮窗开启activity会回调onNewIntent(注意可以setIntent(intent)一下)
 
 
 
@@ -285,6 +292,49 @@
     ```
     android.view.WindowManager$BadTokenException: Unable to add window android.view.ViewRootImpl$W@f8ec928 -- permission denied for window type 2002
     ```
+
+### 06.其他设计说明
+#### 6.1 性能设计
+
+
+#### 6.2 稳定性设计
+
+
+#### 6.3 灰度设计
+
+
+#### 6.4 降级设计
+
+
+#### 6.5 异常设计
+- 针对悬浮窗的添加，移除和更新操作需要增加catch操作。那么为何要这样操作。如下所示：
+    ```
+    try {
+        mWindowManager.addView(mDecorView, mWindowParams);
+    } catch (NullPointerException | IllegalStateException |
+            IllegalArgumentException | WindowManager.BadTokenException e) {
+        // 如果这个 View 对象被重复添加到 WindowManager 则会抛出异常
+        // java.lang.IllegalStateException: View has already been added to the window manager.
+    }
+    
+    //下面这个是更新view
+    try {
+        mWindowManager.updateViewLayout(mDecorView, mWindowParams);
+    } catch (IllegalArgumentException e) {
+        // 当 WindowManager 已经消失时调用会发生崩溃
+        // IllegalArgumentException: View not attached to window manager
+    }
+    ```
+    - 参考系统级别的Toast，其实悬浮窗跟吐司一样，设置系统层级后，对addView增加catch操作。
+    ``` java
+    try {
+        mWM.addView(mView, mParams);
+    } catch (WindowManager.BadTokenException e) {
+        /* ignore */
+    }
+    ```
+
+
 
 
 ### 07.遇到的问题和坑
